changed folder name and added gitattributes

--- a/examples/amsify/load.html
+++ b/examples/amsify/load.html
@@ -26,7 +26,7 @@
 <div class="container" style="min-height:360px;">
 	<div class="col-md-3"></div>
 	<div class="col-md-6 text-center">
-		<a href="#" class="load btn btn-success" data-ajax="modal/test/action.php">
+		<a href="#" class="load btn btn-success" data-ajax="modal/examples/action.php">
 			Load Form
 		</a>
 	</div>
