--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 	<div class="row" style="padding-bottom: 300px;">
 		<h2>Bootstrap</h2>
 		<ol>
-			<li><a href="test/bootstrap/confirm.html">Confirm</a></li>
-			<li><a href="test/bootstrap/message.html">Message</a></li>
-			<li><a href="test/bootstrap/load.html">Load</a></li>
+			<li><a href="examples/bootstrap/confirm.html">Confirm</a></li>
+			<li><a href="examples/bootstrap/message.html">Message</a></li>
+			<li><a href="examples/bootstrap/load.html">Load</a></li>
 		</ol>
 		<h2>Materialize</h2>
 		<ol>
-			<li><a href="test/materialize/confirm.html">Confirm</a></li>
-			<li><a href="test/materialize/message.html">Message</a></li>
-			<li><a href="test/materialize/load.html">Load</a></li>
+			<li><a href="examples/materialize/confirm.html">Confirm</a></li>
+			<li><a href="examples/materialize/message.html">Message</a></li>
+			<li><a href="examples/materialize/load.html">Load</a></li>
 		</ol>
 		<h2>Amsify</h2>
 		<ol>
-			<li><a href="test/amsify/confirm.html">Confirm</a></li>
-			<li><a href="test/amsify/message.html">Message</a></li>
-			<li><a href="test/amsify/load.html">Load</a></li>
+			<li><a href="examples/amsify/confirm.html">Confirm</a></li>
+			<li><a href="examples/amsify/message.html">Message</a></li>
+			<li><a href="examples/amsify/load.html">Load</a></li>
 		</ol>
 	</div>
 </div>
