--- a/examples/amsify/confirm.html
+++ b/examples/amsify/confirm.html
@@ -26,7 +26,7 @@
 <div class="container" style="min-height:360px;">
 	<div class="col-md-3"></div>
 	<div class="col-md-6 text-center">
-		<a href="confirm.html" class="delete btn btn-success" data-ajax="modal/test/action.php">
+		<a href="confirm.html" class="delete btn btn-success" data-ajax="modal/examples/action.php">
 			Click Here
 		</a>
 	</div>
